--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,12 @@
 .text-gradient {
   background: radial-gradient(
     64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
+    #85A9FF 0.89%,
+    #709BFF 17.23%,
+    #5C8DFF 42.04%,
+    #477EFF 55.12%,
+    #3370FF 71.54%,
+    #1F62FF 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -43,12 +43,12 @@
 .bg-blue-gradient {
   background: linear-gradient(
     157.81deg,
-    #def9fa -43.27%,
-    #bef3f5 -21.24%,
-    #9dedf0 12.19%,
-    #7de7eb 29.82%,
-    #5ce1e6 51.94%,
-    #33bbcf 90.29%
+    #85A9FF -43.27%,
+    #709BFF -21.24%,
+    #5C8DFF 12.19%,
+    #477EFF 29.82%,
+    #3370FF 51.94%,
+    #1F62FF 90.29%
   );
 }
 
